Fixed MAGETWO-9652: [Piece of Cake] Numbers are not clearly visible in QTY field on shopping cart page [IE8]

--- a/app/design/frontend/magento2/electron/css/styles.css
+++ b/app/design/frontend/magento2/electron/css/styles.css
@@ -2638,8 +2638,9 @@ select:disabled {
   text-transform: uppercase;
 }
 .items.data input.qty {
-  width: 40px;
+  line-height: 1;
   text-align: center;
+  width: 40px;
 }
 .items.data td.col.price,
 .items.data td.col.subtotal {
